doing the Encryption part.