@@ -1,8 +1,6 @@
 package unimelb.bitbox;
 
 import com.sun.javafx.scene.traversal.Algorithm;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 import unimelb.bitbox.util.Configuration;
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
@@ -18,6 +16,8 @@ import javax.crypto.SecretKey;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Arrays;
+import java.util.Base64;
 import java.util.logging.Logger;
 
 public class Encryption {
@@ -57,10 +57,22 @@ public class Encryption {
 
 	}
 	
-	static String decryptSharedKey(String encryptedKey){
+	static String decryptSharedKey(String encryptedKey,String path) throws Exception {
 		//TODO decode the encrypted key as base 64, decrypt the key with your private key stored in bitboxclient_rsa
 		//byte[] encryptedMsg =
-		return "decryptedSharedKey";
+		try {
+			PrivateKey privateKey = getPrivateKey(path);
+			Cipher cipher = Cipher.getInstance("RSA");//java默认"RSA"="RSA/ECB/PKCS1Padding"
+			cipher.init(Cipher.DECRYPT_MODE, privateKey);
+			String sharedKey = Arrays.toString(cipher.doFinal(Base64.getDecoder().decode(encryptedKey)));
+			//String sharedKey = java.util.Base64.getEncoder().encodeToString(output);
+			return sharedKey;
+		}
+		catch (Exception e){
+			e.printStackTrace();
+			return null;
+		}
+		//return "decryptedSharedKey";
 	}
 	
 	static String encryptMessage(String msg, Key sharedKey){
@@ -73,8 +85,9 @@ public class Encryption {
 			return encrypteMsg;
 		}catch (Exception e){
 			e.printStackTrace();
+			return null;
 		}
-//		return null;
+		//return "encryptedMsg";
 	}
 //		String encryptedMsg = msg;
 //		return encryptedMsg;
@@ -84,8 +97,8 @@ public class Encryption {
 		try {
 			Cipher cipher = Cipher.getInstance("AES");
 			cipher.init(Cipher.DECRYPT_MODE, sharedKey);
-			BASE64Decoder decoder = new BASE64Decoder();
-			byte[] c = decoder.decodeBuffer(encryptedMsg);
+			//BASE64Decoder decoder = new BASE64Decoder();
+			byte[] c = java.util.Base64.getDecoder().decode(encryptedMsg);
 			byte[] result = cipher.doFinal(c);
 			String plainText = new String(result, StandardCharsets.UTF_8);
 			return plainText;
@@ -96,25 +109,25 @@ public class Encryption {
 //		return msg;
 	}
 
-	static PublicKey getPublicKey(String key) throws Exception {
+	private static PublicKey getPublicKey(String key) throws Exception {
 		//TODO getPublicKey from a string read from the configuration file
 		byte[] keyBytes;
-		keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+		keyBytes = java.util.Base64.getDecoder().decode(key);
 		X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
 		KeyFactory keyFactory = KeyFactory.getInstance("RSA");
 		PublicKey publicKey = keyFactory.generatePublic(keySpec);
 		return publicKey;
 	}
 
-    static RSAPrivateKey get() throws Exception {
-        File privateKeyFile = new File("bitboxclient_rsa");
+    private static RSAPrivateKey getPrivateKey(String path) throws Exception {
+        File privateKeyFile = new File(path);
         byte[] encodedKey = new byte[(int) privateKeyFile.length()];
         new FileInputStream(privateKeyFile).read(encodedKey);
-        ByteBuffer keyBytes = new BASE64Decoder().decodeBufferToByteBuffer(encodedKey.toString());
+        ByteBuffer keyBytes = ByteBuffer.wrap(java.util.Base64.getDecoder().decode(encodedKey));
         PKCS8EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(keyBytes.array());
         KeyFactory kf = KeyFactory.getInstance("RSA", "IBMJCEFIPS");
-        RSAPrivateKey pk = (RSAPrivateKey) kf.generatePrivate(privateKeySpec);
-        return pk;
+        RSAPrivateKey privateKey = (RSAPrivateKey) kf.generatePrivate(privateKeySpec);
+        return privateKey;
     }
 	
 }
